Fix navbar padding on mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1,10 +1,3 @@
-/* Landscape tablet and down */
-@media (max-width: 980px){
-  body{
-    padding-top: 0;
-  }
-}
-
 /* Landscape phones and down */
 @media (max-width: 480px) {
   .answer-date {
